# jupyterlab-pytutor

./: .gitignore  .prettierignore  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py
.binder/: environment.yml
.github/workflows/: binder-on-pr.yml  build.yml  check-release.yml
docs/: conf.py  environment.yml  jupyter-lite.json  jupyter_lite_config.json
jupyterlab_pytutor/: __init__.py
schema/: plugin.json
src/: index.ts  svg.d.ts
